# GricGator

./: .gitignore  LICENSE  README.md
gricgator-app/: .env.example  .gitignore  Cargo.toml  README.md  api_calls.md
gricgator-app/src/: main.rs
gricgator-app/src/resources/: cities.json
gricgator-app/src/services/: api.rs  commodities_service.rs  mod.rs  store.rs  types.rs  weather_service.rs
