[package]
name = "gricgator-app"
version = "0.1.0"
edition = "2024"


[dependencies]
csv = { version = "1.4.0"}
dotenv = "0.15.0"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"